--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@hono/node-server": "^1.14.4",
     "hono": "^4.0.1",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
