--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^20.11.19",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
@@ -46,8 +47,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
+    "@types/inquirer": "^9.0.8",
     "commander": "^14.0.0",
     "hono": "^4.0.1",
+    "inquirer": "^12.7.0",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
