--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.19.4",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
@@ -47,8 +47,12 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/inquirer": "^9.0.8",
+    "better-sqlite3": "^12.2.0",
     "commander": "^14.0.0",
+    "dotenv": "^17.0.1",
+    "googleapis": "^135.1.0",
     "hono": "^4.0.1",
     "inquirer": "^12.7.0",
     "ws": "^8.16.0",
