--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/openai": "^1.3.23",
     "@hono/node-server": "^1.14.4",
     "@types/better-sqlite3": "^7.6.13",
     "@types/inquirer": "^9.0.8",
+    "ai": "^4.3.17",
     "better-sqlite3": "^12.2.0",
     "commander": "^14.0.0",
     "dotenv": "^17.0.1",
@@ -56,7 +59,7 @@
     "hono": "^4.0.1",
     "inquirer": "^12.7.0",
     "ws": "^8.16.0",
-    "zod": "^3.22.4"
+    "zod": "^3.25.76"
   },
   "engines": {
     "node": ">=18.0.0"
